syntax = "proto3";

message Claim {
  string identifier = 2;
  string name = 3;
  User owner = 4;
}

message User {
  uint64 uid = 1;
  string phone_no = 2;
  string picture_url = 3;
  uint64 balance = 4;
  string username = 5;
}

message Room {
  uint64 uid = 1;
  User owner = 2;
  string name = 3;
  repeated RoomItem item = 4;
  repeated User invited = 5;
}

message RoomItem {
  uint64 uid = 1;
  string name = 2;
  uint64 value = 3;
  User locked_by = 4;
}
